# Tohka-programming-language

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
Token/: CMakeLists.txt  token.h
cli/: CMakeLists.txt  cli.cpp  cli.h
client/: cli.cpp  cli.h
compiler/: .gitkeep  CMakeLists.txt  CompilerUnit.h  Loop.h  Signature.h  Upvalue.h  class_book_keep.h  compile_unit.cpp  compile_unit.h  compiler.cpp  compiler.h  compiler_unit.cpp  compiler_unit.h  headers.h  local_var.h  upvalue.h
core/: CMakeLists.txt  core.cpp  core.h  mem_allocator.cpp  mem_allocator.h  mem_buffer_stl.h  opcode.h  operand.cpp  operand.h  primitive_methods.cpp  primitive_methods.h  vm.cpp  vm.h
example/: parser.sp  parser.toh  parser2.sp  parser_output.txt
gc/: .gitkeep
includes/: CMakeLists.txt  color.h  common.h  unicode.cpp  unicode.h  utils.cpp  utils.h  utils_cpp.h
object/: .gitkeep  BaseClass.cpp  BaseClass.h  CMakeLists.txt  Frame.cpp  Frame.h  Method.h  ObjClosure.cpp  ObjClosure.h  ObjFunction.cpp  ObjFunction.h  ObjInstance.cpp  ObjInstance.h  ObjList.cpp  ObjList.h  ObjMap.cpp  ObjMap.h  ObjModule.cpp  ObjModule.h  ObjRange.cpp  ObjRange.h  ObjString.cpp  ObjString.h  ObjThread.cpp  ObjThread.h  ObjUpvalue.cpp  ObjUpvalue.h  ObjectHeader.cpp  ObjectHeader.h  Value.cpp  Value.h  base_class.cpp  base_class.h  frame.cpp  frame.h  headers.h  method.h  obj_closure.cpp  obj_closure.h  obj_function.cpp  (+21 more)
parser/: CMakeLists.txt  lists.txt  parser.cpp  parser.h  token.list
symbol/: CMakeLists.txt  operator.cpp  operator.h  signature.cpp  signature.h  symbol_bind_rule.cpp  symbol_bind_rule.h
token/: CMakeLists.txt  headers.h  lists.txt  token.h  token_list.h
token/prefix_symbol_token/: boolean_prefix_token.cpp  boolean_prefix_token.h  left_brace_token.cpp  left_brace_token.h  left_paren_token.cpp  left_paren_token.h  literal_prefix_token.cpp  literal_prefix_token.h  null_token.cpp  null_token.h  super_token.cpp  super_token.h  this_token.cpp  this_token.h
token/unused_rule_token/: colon_token.cpp  colon_token.h  comma_token.cpp  comma_token.h  keyword_token.cpp  keyword_token.h  unknown_token.cpp  unknown_token.h  unused_rule_token.cpp  unused_rule_token.h
token/unused_rule_token/others/: break_token.h  else_token.h  for_token.h  fun_token.h  if_token.h  var_token.h  while_token.h
vm/: CMakeLists.txt  MemAllocator.cpp  MemAllocator.h  MemBufferSTL.h  core.cpp  core.h  core_script.h  mem_allocator.cpp  mem_allocator.h  mem_buffer_stl.h  opcode.h  opcode.inc  operand.cpp  operand.h  primitive_methods.cpp  primitive_methods.h  vm.cpp  vm.h
